--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,6 +1,6 @@
 <div class="text-affichage-show-character-div">
-  <h3 class="text-affichage-show-character">Félicitation ! Vous venez de créer votre personnage !
-  Vous pouvez maintenant lancer une recherche de partie avec votre nouveau personnage ou décider de le garder pour plus tard. Retrouvez votre personnage dans votre Tableau De Bord.</h3>
+  <h3 class="text-affichage-show-character">Félicitations ! Vous venez de créer votre personnage !
+    Vous pouvez maintenant lancer une recherche de partie avec votre nouveau personnage ou décider de le garder pour plus tard. Retrouvez votre personnage dans votre tableau de bord.</h3>
 </div>
 
 <div class="show-character-container">
