--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -16,6 +16,7 @@
         <th>Wisdom</th>
         <th>Charisma</th>
         <th>Mis à jour le</th>
+        <th>Mes parties</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -35,6 +36,11 @@
           <td><%= character.wisdom.presence || 'Non défini' %></td>
           <td><%= character.charisma.presence || 'Non défini' %></td>
           <td><%= character.updated_at.in_time_zone('Paris').strftime("%d/%m/%Y %H:%M") %></td>
+          <td>
+            <% character.parties.each do |party| %>
+              <%= link_to party.id, party_path(party) %><br>
+            <% end %>
+          </td>
           <td>
             <%= link_to 'Show', character_path(character) %>
             <%= link_to 'Edit', edit_character_path(character) %>
