--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -46,7 +46,9 @@
             <% end %>
           </td>
           <td>
-            <%= link_to 'Show', character_path(character) %>
+            <% if character.name.present? %>
+              <%= link_to 'Show', character_path(character) %>
+            <% end %>
             <%= link_to 'Edit', edit_character_path(character) %>
             <%= button_to 'Delete', character_path(character), method: :delete, data: { confirm: 'Est-ce que vous en êtes sûr de vous ?' }, form: { class: 'inline-form' } %>
           </td>
