--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -1,14 +1,28 @@
-<h1><%= @party.name %></h1>
-<p>Univers: <%= @party.universe.name %></p>
-<p>Maître de jeu: <%= @party.user.pseudo %></p>
+<div class="party-show-container">
+  <div class="party-details">
+    <h1><%= @party.name %></h1>
+    <p>Univers: <%= @party.universe.name %></p>
+    <p>Maître de jeu: <%= @party.user.pseudo %></p>
 
-<h2>Personnages actifs dans cette partie</h2>
-<ul>
-  <% @party.characters.where(available_status: 'Active').each do |character| %>
-    <li><%= link_to character.name, character_path(character) %></li>
-  <% end %>
-</ul>
+    <h2>Personnages actifs dans cette partie</h2>
+    <ul>
+      <% @party.characters.where(available_status: 'Active').each do |character| %>
+        <li><%= link_to character.name, character_path(character) %></li>
+      <% end %>
+    </ul>
+  </div>
 
-<%= link_to 'Modifier', edit_party_path(@party), class: 'btn btn-primary' %>
-<%= link_to 'Supprimer', @party, method: :delete, data: { confirm: 'Êtes-vous sûr?' }, class: 'btn btn-danger' %>
-<%= link_to 'Retour', parties_path, class: 'btn btn-secondary' %>
+  <div class="chatroom-container" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @party.chatroom.id %>">
+    <h1>#<%= @party.chatroom.name %></h1>
+    <div class="messages" data-chatroom-subscription-target="messages">
+      <% @party.chatroom.messages.each do |message| %>
+        <%= render "messages/message", message: message %>
+      <% end %>
+    </div>
+    <%= simple_form_for [@party, @party.chatroom.messages.build],
+      html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
+      <%= f.input :content, label: false, placeholder: "Message ##{@party.chatroom.name}", wrapper_html: { class: "flex-grow-1" } %>
+      <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+    <% end %>
+  </div>
+</div>
