--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "button";
 @import "card_character";
+@import "chatroom";
 @import "content-site";
 @import "form_legend_clear";
 @import "navbar";
