--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,1 +1,17 @@
-
+// app/assets/stylesheets/components/_chatroom.scss
+.chatroom-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    .messages {
+      flex-grow: 1;
+      overflow-y: scroll;
+    }
+    form {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      background-color: #f5f5f5;
+    }
+  }
+  
