--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,8 @@
 <!-- app/views/messages/_message.html.erb -->
 <div class="message">
-  <strong><%= message.user.pseudo %>:</strong>
+  <small>
+    <strong><%= message.user.pseudo %></strong>
+    <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+  </small>
   <p><%= message.content %></p>
 </div>
