--- a/app/assets/stylesheets/components/_chatbox.scss
+++ b/app/assets/stylesheets/components/_chatbox.scss
@@ -1,40 +1,43 @@
 /* app/assets/stylesheets/components/_chatbox.scss */
 .chatbox-container {
-    position: fixed;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 300px;
-    background: #f8f9fa;
-    border-left: 1px solid #dee2e6;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-  }
-  
-  .chatbox {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .chatbox .messages {
-    flex-grow: 1;
-    overflow-y: auto;
-    margin-bottom: 10px;
-  }
-  
-  .chatbox .message {
-    margin-bottom: 10px;
-  }
-  
-  .chatbox form {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .chatbox form .flex-grow-1 {
-    flex-grow: 1;
-  }
-  
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 300px;
+  background: #f8f9fa;
+  border-left: 1px solid #dee2e6;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.chatbox {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.chatbox .messages {
+  flex-grow: 1;
+  overflow-y: auto;
+  margin-bottom: 10px;
+}
+
+.chatbox .message {
+  margin-bottom: 10px;
+}
+
+.chatbox form {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  bottom: 0;
+  width: calc(100% - 20px); /* Adjust width considering padding */
+  padding: 10px 0;
+  background: #f8f9fa;
+}
+
+.chatbox form .flex-grow-1 {
+  flex-grow: 1;
+}
