--- a/app/assets/stylesheets/components/_chatbox.scss
+++ b/app/assets/stylesheets/components/_chatbox.scss
@@ -4,7 +4,7 @@
   right: 0;
   top: 0;
   height: 100%;
-  width: 300px;
+  width: 33.33%; /* Updated width to match col-md-4 (1/3 of the width) */
   background: #f8f9fa;
   border-left: 1px solid #dee2e6;
   display: flex;
