--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -19,21 +19,23 @@
               <div class="description">
                 <strong><%= race.name %></strong>
                 <p><%= race.description %></p>
-                <span data-bs-toggle="modal" data-bs-target="#race-modal-<%= race.id %>">?</span>
+                 <%# toggle modal %>
+                <span class="toggle-modal"data-bs-toggle="modal" data-bs-target="#race-modal-<%= race.id %>" data-bs-toggle="tooltip" data-bs-placement="bottom" title="En savoir plus sur les <%= race.name %>s">?</span>
               </div>
             </label>
           </div>
-          <div class="modal fade" id="race-modal-<%= race.id %>" tabindex="-1" aria-labelledby="race_modalLabel" aria-hidden="true">
+          <div class="modal fade " id="race-modal-<%= race.id %>" tabindex="-1" aria-labelledby="race_modalLabel" aria-hidden="true">
+            <%# modal %>
             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+              <%# modal content %>
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="race_modalLabel">Tutoriel: <%= race.name %></h5>
+                  <h5 class="modal-title" id="race_modalLabel"> Les <%= race.name %>s</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <% tutorial = @character.universe.tutorials.find_by(race: race.name) %>
                   <% if tutorial %>
-                    <h5><%= tutorial.title %></h5>
                     <p><%= tutorial.content %></p>
                     <% if tutorial.video_url.present? %>
                       <video src="<%= tutorial.video_url %>" controls></video>
@@ -60,12 +62,15 @@
               <div class="description">
                 <strong><%= univers_class.name %></strong>
                 <p><%= univers_class.description %></p>
-                <span data-bs-toggle="modal" data-bs-target="#class-modal-<%= univers_class.id %>">?</span>
+                <%# toggle  modal %>
+                <span class="toggle-modal" data-bs-toggle="modal" data-bs-target="#class-modal-<%= univers_class.id  %>" data-bs-toggle="tooltip" data-bs-placement="bottom" title="En savoir plus sur la classe <%= univers_class.name %>">?</span>
               </div>
             </label>
           </div>
           <div class="modal fade" id="class-modal-<%= univers_class.id %>" tabindex="-1" aria-labelledby="class_modalLabel" aria-hidden="true">
+            <%# modal %>
             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+              <%# modal content %>
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="class_modalLabel">Tutoriel: <%= univers_class.name %></h5>
