--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/parties/show.html.erb -->
 <div class="container-fluid">
-  <div class="row">
+  <div class="party_full_page">
     <!-- Main Content -->
     <div class="col-md-8">
       <h1><%= @party.name %></h1>
@@ -25,9 +25,9 @@
           <% end %>
         </div>
         <%= simple_form_for [@party, @party.messages.build],
-          html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex w-100" } do |f| %>
+          html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" } } do |f| %>
           <%= f.input :content, label: false, placeholder: "Message", wrapper_html: { class: "flex-grow-1" } %>
-          <%= f.submit "Envoyer", class: "btn btn-primary mb-3" %>
+          <%= f.submit "Envoyer", class: "btn btn-primary" %>
         <% end %>
       </div>
     </div>
